src/test/run-pass/issues/issue-24353.rs
// run-pass
#![allow(unreachable_code)]
fn main() {
    return ();

    let x = ();
    x
}
